Rename transfer to pending transfer
