# raiden-swagger-sdk/models/index.ts
@@ -2,5 +2,5 @@ export * from "./Address";
 export * from "./Channel";
 export * from "./Errors";
 export * from "./Partner";
+export * from "./PendingTransfer";
 export * from "./TokenNetworkAddress";
-export * from "./Transfer";
